--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -118,20 +118,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "d42c5ea1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\celli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# --- PDF attachment (RAG-lite) ---\n",
+    "# --- PDF attachment (Hybrid RAG: BM25 + Embeddings + Multi-step) ---\n",
     "from __future__ import annotations\n",
     "\n",
     "import io\n",
+    "import math\n",
     "import re\n",
     "from dataclasses import dataclass\n",
-    "from typing import List, Tuple\n",
+    "from typing import Dict, List, Optional, Tuple\n",
     "\n",
-    "# Install lightweight deps if missing (safe to re-run)\n",
+    "# Install / import PDF extraction\n",
     "try:\n",
     "    from pypdf import PdfReader  # type: ignore\n",
     "except Exception:\n",
@@ -139,6 +149,7 @@
     "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"pypdf\"])\n",
     "    from pypdf import PdfReader  # type: ignore\n",
     "\n",
+    "# Widgets (optional UI)\n",
     "try:\n",
     "    import ipywidgets as widgets  # type: ignore\n",
     "    from IPython.display import display  # type: ignore\n",
@@ -146,11 +157,27 @@
     "    widgets = None\n",
     "    display = None\n",
     "\n",
+    "# Hybrid retrieval deps\n",
+    "import numpy as np\n",
+    "try:\n",
+    "    from rank_bm25 import BM25Okapi  # type: ignore\n",
+    "except Exception:\n",
+    "    import sys, subprocess\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"rank-bm25\"])\n",
+    "    from rank_bm25 import BM25Okapi  # type: ignore\n",
+    "\n",
+    "try:\n",
+    "    from sentence_transformers import SentenceTransformer  # type: ignore\n",
+    "except Exception:\n",
+    "    SentenceTransformer = None  # type: ignore\n",
+    "\n",
     "\n",
     "_WORD_RE = re.compile(r\"\\b\\w+\\b\", re.UNICODE)\n",
     "_STOPWORDS = {\n",
-    "    \"the\",\"a\",\"an\",\"and\",\"or\",\"to\",\"of\",\"in\",\"on\",\"for\",\"with\",\"is\",\"are\",\"was\",\"were\",\"be\",\"as\",\"at\",\"by\",\"it\",\"this\",\"that\",\n",
-    "    \"le\",\"la\",\"les\",\"un\",\"une\",\"des\",\"et\",\"ou\",\"de\",\"du\",\"dans\",\"sur\",\"pour\",\"avec\",\"est\",\"sont\",\"été\",\"être\",\"ce\",\"cet\",\"cette\",\"ces\",\n",
+    "    # EN\n",
+    "    \"the\",\"a\",\"an\",\"and\",\"or\",\"to\",\"of\",\"in\",\"on\",\"for\",\"with\",\"is\",\"are\",\"was\",\"were\",\"be\",\"as\",\"at\",\"by\",\"it\",\"this\",\"that\",\"from\",\"into\",\"over\",\"under\",\"not\",\n",
+    "    # FR\n",
+    "    \"le\",\"la\",\"les\",\"un\",\"une\",\"des\",\"et\",\"ou\",\"de\",\"du\",\"dans\",\"sur\",\"pour\",\"avec\",\"est\",\"sont\",\"été\",\"être\",\"ce\",\"cet\",\"cette\",\"ces\",\"pas\",\"plus\",\n",
     "}\n",
     "\n",
     "\n",
@@ -175,68 +202,140 @@
     "        return _pdf_bytes_to_text(f.read())\n",
     "\n",
     "\n",
-    "def chunk_text(text: str, *, max_chars: int = 1800, overlap: int = 250) -> List[str]:\n",
-    "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
+    "_COLREG_HEAD_RE = re.compile(\n",
+    "    r\"(?im)^(rule\\s+\\d+\\b.*|annex\\s+[ivx]+\\b.*|appendix\\b.*)$\"\n",
+    " )\n",
+    "\n",
+    "\n",
+    "def _normalize_ws(text: str) -> str:\n",
+    "    return re.sub(r\"\\s+\", \" \", text).strip()\n",
+    "\n",
+    "\n",
+    "def chunk_colreg(text: str, *, max_chars: int = 1600, overlap: int = 250) -> List[Tuple[str, str]]:\n",
+    "    \"\"\"Chunk COLREG-like docs by headings (Rule/Annex), then slice each section.\"\"\"\n",
+    "    raw = text.replace(\"\\r\\n\", \"\\n\")\n",
+    "    lines = [ln.strip() for ln in raw.split(\"\\n\")]\n",
+    "    headings: List[Tuple[int, str]] = []\n",
+    "    for i, ln in enumerate(lines):\n",
+    "        if not ln:\n",
+    "            continue\n",
+    "        m = _COLREG_HEAD_RE.match(ln)\n",
+    "        if m:\n",
+    "            headings.append((i, m.group(1).strip()))\n",
+    "    if not headings:\n",
+    "        # Fallback: no headings detected -> single section\n",
+    "        joined = _normalize_ws(raw)\n",
+    "        return [(\"Document\", ch) for ch in _slice_text(joined, max_chars=max_chars, overlap=overlap)]\n",
+    "\n",
+    "    # Ensure start at first heading\n",
+    "    chunks: List[Tuple[str, str]] = []\n",
+    "    for idx, (start_i, title) in enumerate(headings):\n",
+    "        end_i = headings[idx + 1][0] if idx + 1 < len(headings) else len(lines)\n",
+    "        section_text = _normalize_ws(\" \".join([ln for ln in lines[start_i:end_i] if ln]))\n",
+    "        if not section_text:\n",
+    "            continue\n",
+    "        for ch in _slice_text(section_text, max_chars=max_chars, overlap=overlap):\n",
+    "            chunks.append((title, ch))\n",
+    "    return chunks\n",
+    "\n",
+    "\n",
+    "def _slice_text(text: str, *, max_chars: int, overlap: int) -> List[str]:\n",
+    "    text = _normalize_ws(text)\n",
     "    if not text:\n",
     "        return []\n",
-    "    chunks: List[str] = []\n",
+    "    out: List[str] = []\n",
     "    start = 0\n",
     "    n = len(text)\n",
     "    while start < n:\n",
     "        end = min(n, start + max_chars)\n",
-    "        chunks.append(text[start:end])\n",
+    "        out.append(text[start:end])\n",
     "        if end >= n:\n",
     "            break\n",
     "        start = max(0, end - overlap)\n",
-    "    return chunks\n",
+    "    return out\n",
     "\n",
     "\n",
-    "def _score(query_tokens: List[str], chunk: str) -> int:\n",
-    "    # Simple lexical overlap score (fast, no embeddings).\n",
-    "    chunk_tokens = _tokenize(chunk)\n",
-    "    if not chunk_tokens or not query_tokens:\n",
-    "        return 0\n",
-    "    chunk_set = set(chunk_tokens)\n",
-    "    score = 0\n",
-    "    for t in query_tokens:\n",
-    "        if t in chunk_set:\n",
-    "            score += 2\n",
-    "    return score\n",
+    "def _cosine_sim(a: np.ndarray, b: np.ndarray) -> float:\n",
+    "    na = np.linalg.norm(a)\n",
+    "    nb = np.linalg.norm(b)\n",
+    "    if na == 0 or nb == 0:\n",
+    "        return 0.0\n",
+    "    return float(np.dot(a, b) / (na * nb))\n",
     "\n",
     "\n",
-    "def retrieve_context(question: str, chunks: List[str], *, k: int = 4) -> List[Tuple[int, str]]:\n",
-    "    q = _tokenize(question)\n",
-    "    scored = [(i, _score(q, ch)) for i, ch in enumerate(chunks)]\n",
-    "    scored.sort(key=lambda x: x[1], reverse=True)\n",
-    "    top = [(i, chunks[i]) for i, s in scored[:k] if s > 0]\n",
-    "    return top\n",
+    "def _minmax(scores: np.ndarray) -> np.ndarray:\n",
+    "    if scores.size == 0:\n",
+    "        return scores\n",
+    "    mn = float(scores.min())\n",
+    "    mx = float(scores.max())\n",
+    "    if mx - mn < 1e-9:\n",
+    "        return np.zeros_like(scores, dtype=float)\n",
+    "    return (scores - mn) / (mx - mn)\n",
     "\n",
     "\n",
-    "def build_context(excerpts: List[Tuple[int, str]]) -> str:\n",
-    "    if not excerpts:\n",
-    "        return \"\"\n",
-    "    lines: List[str] = []\n",
-    "    for i, ch in excerpts:\n",
-    "        lines.append(f\"[Chunk {i+1}] {ch}\")\n",
-    "    return \"\\n\\n\".join(lines)\n",
+    "@dataclass\n",
+    "class Chunk:\n",
+    "    idx: int\n",
+    "    section: str\n",
+    "    text: str\n",
     "\n",
     "\n",
     "@dataclass\n",
     "class AttachedPDF:\n",
     "    name: str\n",
     "    text: str\n",
-    "    chunks: List[str]\n",
+    "    chunks: List[Chunk]\n",
+    "    bm25: BM25Okapi\n",
+    "    bm25_tokens: List[List[str]]\n",
+    "    embedder_name: str\n",
+    "    embeddings: Optional[np.ndarray]  # shape: (n, d) or None\n",
     "\n",
     "\n",
     "ATTACHED_PDF: AttachedPDF | None = None\n",
-    "RETRIEVE_K = 4\n",
+    "RETRIEVE_K = 6\n",
+    "BM25_WEIGHT = 0.55\n",
+    "SEM_WEIGHT = 0.45\n",
+    "EMBEDDER_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "_EMBEDDER: Optional[SentenceTransformer] = None  # type: ignore\n",
+    "\n",
+    "\n",
+    "def _get_embedder() -> Optional[\"SentenceTransformer\"]:\n",
+    "    global _EMBEDDER\n",
+    "    if SentenceTransformer is None:\n",
+    "        return None\n",
+    "    if _EMBEDDER is None:\n",
+    "        _EMBEDDER = SentenceTransformer(EMBEDDER_NAME)\n",
+    "    return _EMBEDDER\n",
     "\n",
     "\n",
     "def attach_pdf_text(name: str, text: str) -> None:\n",
+    "    \"\"\"Attach PDF text and build hybrid indexes (BM25 + embeddings).\"\"\"\n",
     "    global ATTACHED_PDF\n",
-    "    chunks = chunk_text(text)\n",
-    "    ATTACHED_PDF = AttachedPDF(name=name, text=text, chunks=chunks)\n",
+    "    pairs = chunk_colreg(text)\n",
+    "    chunks = [Chunk(idx=i, section=sec, text=ch) for i, (sec, ch) in enumerate(pairs)]\n",
+    "    bm25_tokens = [_tokenize(c.text) for c in chunks]\n",
+    "    bm25 = BM25Okapi(bm25_tokens)\n",
+    "\n",
+    "    embedder = _get_embedder()\n",
+    "    embeddings: Optional[np.ndarray] = None\n",
+    "    if embedder is not None:\n",
+    "        # Encode sections+text (helps retrieval by rule name)\n",
+    "        docs = [f\"{c.section}. {c.text}\" for c in chunks]\n",
+    "        emb = embedder.encode(docs, normalize_embeddings=True, show_progress_bar=False)\n",
+    "        embeddings = np.asarray(emb, dtype=np.float32)\n",
+    "\n",
+    "    ATTACHED_PDF = AttachedPDF(\n",
+    "        name=name,\n",
+    "        text=text,\n",
+    "        chunks=chunks,\n",
+    "        bm25=bm25,\n",
+    "        bm25_tokens=bm25_tokens,\n",
+    "        embedder_name=EMBEDDER_NAME,\n",
+    "        embeddings=embeddings,\n",
+    "    )\n",
     "    print(f\"Attached PDF: {name} ({len(text):,} chars, {len(chunks)} chunks)\")\n",
+    "    if embeddings is None:\n",
+    "        print(\"(Embeddings disabled: sentence-transformers not available)\")\n",
     "\n",
     "\n",
     "def clear_pdf() -> None:\n",
@@ -245,15 +344,110 @@
     "    print(\"PDF cleared\")\n",
     "\n",
     "\n",
-    "def ask_on_pdf(question: str, *, k: int | None = None) -> str:\n",
+    "def _hybrid_scores(question: str) -> Tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
+    "    assert ATTACHED_PDF is not None\n",
+    "    q_tokens = _tokenize(question)\n",
+    "    bm25_scores = np.asarray(ATTACHED_PDF.bm25.get_scores(q_tokens), dtype=float)\n",
+    "    bm25_norm = _minmax(bm25_scores)\n",
+    "\n",
+    "    sem_norm = np.zeros_like(bm25_norm, dtype=float)\n",
+    "    if ATTACHED_PDF.embeddings is not None:\n",
+    "        embedder = _get_embedder()\n",
+    "        if embedder is not None:\n",
+    "            q_emb = embedder.encode([question], normalize_embeddings=True, show_progress_bar=False)\n",
+    "            q_emb = np.asarray(q_emb[0], dtype=np.float32)\n",
+    "            # cosine because embeddings are normalized => dot product = cosine\n",
+    "            sem = np.dot(ATTACHED_PDF.embeddings, q_emb).astype(float)\n",
+    "            sem_norm = _minmax(sem)\n",
+    "\n",
+    "    hybrid = BM25_WEIGHT * bm25_norm + SEM_WEIGHT * sem_norm\n",
+    "    return hybrid, bm25_norm, sem_norm\n",
+    "\n",
+    "\n",
+    "def _diverse_topk(indices: List[int], *, k: int) -> List[int]:\n",
+    "    \"\"\"Keep a diverse set of chunks by section to avoid near-duplicates.\"\"\"\n",
+    "    assert ATTACHED_PDF is not None\n",
+    "    picked: List[int] = []\n",
+    "    seen_sections: Dict[str, int] = {}\n",
+    "    for idx in indices:\n",
+    "        sec = ATTACHED_PDF.chunks[idx].section\n",
+    "        # allow up to 2 chunks per section in the final context\n",
+    "        if seen_sections.get(sec, 0) >= 2:\n",
+    "            continue\n",
+    "        picked.append(idx)\n",
+    "        seen_sections[sec] = seen_sections.get(sec, 0) + 1\n",
+    "        if len(picked) >= k:\n",
+    "            break\n",
+    "    return picked\n",
+    "\n",
+    "\n",
+    "def retrieve_context(question: str, *, k: int = 6, pool: int = 20) -> List[int]:\n",
+    "    \"\"\"Hybrid retrieval with diversity: returns chunk indices.\"\"\"\n",
+    "    if not ATTACHED_PDF:\n",
+    "        return []\n",
+    "    hybrid, _, _ = _hybrid_scores(question)\n",
+    "    ranked = np.argsort(-hybrid)[: max(pool, k)].tolist()\n",
+    "    ranked = [i for i in ranked if hybrid[i] > 0]\n",
+    "    return _diverse_topk(ranked, k=k)\n",
+    "\n",
+    "\n",
+    "def _build_context(indices: List[int]) -> str:\n",
+    "    assert ATTACHED_PDF is not None\n",
+    "    if not indices:\n",
+    "        return \"\"\n",
+    "    blocks: List[str] = []\n",
+    "    for idx in indices:\n",
+    "        c = ATTACHED_PDF.chunks[idx]\n",
+    "        blocks.append(f\"[Chunk {idx+1} | {c.section}] {c.text}\")\n",
+    "    return \"\\n\\n\".join(blocks)\n",
+    "\n",
+    "\n",
+    "def _generate_search_queries(question: str) -> List[str]:\n",
+    "    \"\"\"Ask the LLM for 3 short retrieval queries (multi-step RAG).\"\"\"\n",
+    "    prompt = (\n",
+    "        \"Generate 3 short search queries (keywords + any relevant Rule/Annex numbers) \"\n",
+    "        \"to find the answer in the COLREG document. Output only the queries, one per line.\\n\\n\"\n",
+    "        f\"Question: {question}\"\n",
+    "    )\n",
+    "    raw = bot.reply(prompt, max_tokens=128, temperature=0.2)\n",
+    "    lines = [ln.strip(\" -\\t\") for ln in raw.splitlines() if ln.strip()]\n",
+    "    # keep at most 3\n",
+    "    return lines[:3] if lines else [question]\n",
+    "\n",
+    "\n",
+    "def retrieve_context_multistep(question: str, *, k: int = 6) -> List[int]:\n",
+    "    \"\"\"Two-pass retrieval: initial -> query expansion -> merged retrieval.\"\"\"\n",
+    "    if not ATTACHED_PDF:\n",
+    "        return []\n",
+    "    # Pass 1\n",
+    "    init = retrieve_context(question, k=max(4, k), pool=30)\n",
+    "    # Pass 2: query expansion\n",
+    "    queries = _generate_search_queries(question)\n",
+    "    merged_scores = np.zeros(len(ATTACHED_PDF.chunks), dtype=float)\n",
+    "    # seed with initial question\n",
+    "    for q in [question] + queries:\n",
+    "        hybrid, _, _ = _hybrid_scores(q)\n",
+    "        merged_scores = np.maximum(merged_scores, hybrid)\n",
+    "    ranked = np.argsort(-merged_scores)[: 40].tolist()\n",
+    "    ranked = [i for i in ranked if merged_scores[i] > 0]\n",
+    "    # ensure we keep some of the pass-1 results\n",
+    "    for idx in init:\n",
+    "        if idx in ranked:\n",
+    "            ranked.remove(idx)\n",
+    "        ranked.insert(0, idx)\n",
+    "    # Diverse final\n",
+    "    return _diverse_topk(ranked, k=k)\n",
+    "\n",
+    "\n",
+    "def ask_on_pdf(question: str, *, k: int | None = None, multistep: bool = True) -> str:\n",
     "    if not ATTACHED_PDF:\n",
     "        return bot.reply(question)\n",
     "    k = RETRIEVE_K if k is None else k\n",
-    "    excerpts = retrieve_context(question, ATTACHED_PDF.chunks, k=k)\n",
-    "    context = build_context(excerpts)\n",
+    "    indices = retrieve_context_multistep(question, k=k) if multistep else retrieve_context(question, k=k)\n",
+    "    context = _build_context(indices)\n",
     "    prompt = (\n",
     "        \"You are evaluating a model. Answer the user's question using ONLY the provided document excerpts. \"\n",
-    "        \"If the excerpts do not contain the answer, say you don't know and ask what to look for.\\n\\n\"\n",
+    "        \"Cite the chunks you used like (Chunk 12). If the excerpts do not contain the answer, say you don't know.\\n\\n\"\n",
     "        f\"Document: {ATTACHED_PDF.name}\\n\\n\"\n",
     "        f\"EXCERPTS:\\n{context if context else '[No relevant excerpts found]'}\\n\\n\"\n",
     "        f\"QUESTION:\\n{question}\"\n",
@@ -262,29 +456,22 @@
     "\n",
     "\n",
     "def _extract_first_upload(value) -> tuple[str, bytes] | None:\n",
-    "    \"\"\"Return (filename, content_bytes) for the first uploaded file.\n",
-    "\n",
-    "    ipywidgets has changed FileUpload.value across versions: it can be a dict, tuple, or list.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Return (filename, content_bytes) for the first uploaded file.\"\"\"\n",
     "    if not value:\n",
     "        return None\n",
-    "    # Case 1: dict keyed by filename -> {\"file.pdf\": {\"content\": b\"...\", ...}}\n",
     "    if isinstance(value, dict):\n",
     "        first_key = next(iter(value.keys()))\n",
     "        first = value[first_key]\n",
     "        if isinstance(first, dict) and \"content\" in first:\n",
     "            name = first.get(\"name\") or first_key\n",
     "            return name, first[\"content\"]\n",
-    "        # Sometimes it's already a dict with content\n",
     "        if isinstance(first, (bytes, bytearray)):\n",
     "            return first_key, bytes(first)\n",
-    "    # Case 2: tuple/list of dicts -> ({\"name\":..., \"content\":...}, ...)\n",
     "    if isinstance(value, (tuple, list)):\n",
     "        first = value[0]\n",
     "        if isinstance(first, dict) and \"content\" in first:\n",
     "            name = first.get(\"name\") or \"uploaded.pdf\"\n",
     "            return name, first[\"content\"]\n",
-    "        # Case 3: UploadedFile-like object\n",
     "        name = getattr(first, \"name\", \"uploaded.pdf\")\n",
     "        content = getattr(first, \"content\", None)\n",
     "        if content is None:\n",
@@ -293,7 +480,6 @@
     "            content = bytes(first)\n",
     "        if isinstance(content, (bytes, bytearray)):\n",
     "            return name, bytes(content)\n",
-    "    # Fallback: try attributes on the value itself\n",
     "    name = getattr(value, \"name\", \"uploaded.pdf\")\n",
     "    content = getattr(value, \"content\", None)\n",
     "    if isinstance(content, (bytes, bytearray)):\n",
@@ -444,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "81c21283",
    "metadata": {},
    "outputs": [
@@ -454,7 +640,8 @@
      "text": [
       "CSV: C:\\Users\\celli\\Documents\\.PIP2026\\PIP-2026-LOTUSim_G5_Fatigue\\Set évaluation RAG.csv\n",
       "PDF: C:\\Users\\celli\\Documents\\.PIP2026\\PIP-2026-LOTUSim_G5_Fatigue\\COLREG-Consolidated-2018.pdf\n",
-      "Loaded 12 questions\n"
+      "Loaded 12 questions\n",
+      "Attached PDF: COLREG-Consolidated-2018.pdf (104,429 chars, 95 chunks)\n"
      ]
     }
    ],
@@ -517,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "84070ff5",
    "metadata": {},
    "outputs": [
