--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "# Recommended: set HF_TOKEN in your OS environment and restart the kernel.\n",
     "# Example (PowerShell): setx HF_TOKEN \"hf_...\"\n",
-    "os.environ[\"HF_TOKEN\"] = \"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\""
+    "os.environ[\"HF_TOKEN\"] = \"----\""
    ]
   },
   {
