--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -5,95 +5,110 @@
    "id": "9606e0f3",
    "metadata": {},
    "source": [
-    "# DeepSeek-V3.2 Chatbot\n",
+    "# Local Ollama Chatbot (Qwen)\n",
     "\n",
-    "This notebook runs a minimal chatbot against the Hugging Face hosted model `deepseek-ai/DeepSeek-V3.2`.\n",
+    "This notebook runs a minimal chatbot against a **local** Ollama model via its OpenAI-compatible API.\n",
     "\n",
-    "Prereq: set an access token in your environment as `HF_TOKEN` (recommended) or set it in the cell below (not recommended for shared notebooks)."
+    "Prereq:\n",
+    "- Install Ollama and run it\n",
+    "- Ensure a model is pulled (example: `ollama pull qwen3:8b`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "5fe6dd67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
+      "MODEL_NAME: qwen3:8b\n"
+     ]
+    }
+   ],
    "source": [
-    "# Token setup\n",
+    "# Local backend setup (Ollama)\n",
     "import os\n",
     "\n",
-    "# Recommended: set HF_TOKEN in your OS environment and restart the kernel.\n",
-    "# Example (PowerShell): setx HF_TOKEN \"hf_...\"\n",
-    "os.environ[\"HF_TOKEN\"] = \"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\""
+    "# Ollama OpenAI-compatible base URL\n",
+    "os.environ.setdefault(\"LOCAL_OPENAI_BASE_URL\", \"http://localhost:11434/v1\")\n",
+    "\n",
+    "# Model to use (text-only Qwen is recommended for this notebook)\n",
+    "MODEL_NAME = os.getenv(\"LOCAL_MODEL_NAME\", \"qwen3:8b\")\n",
+    "\n",
+    "# Optional: some gateways require a key; Ollama accepts any value.\n",
+    "# os.environ.setdefault(\"LOCAL_OPENAI_API_KEY\", \"ollama\")\n",
+    "\n",
+    "print(\"LOCAL_OPENAI_BASE_URL:\", os.getenv(\"LOCAL_OPENAI_BASE_URL\"))\n",
+    "print(\"MODEL_NAME:\", MODEL_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "126669d1",
+   "execution_count": 54,
+   "id": "b89c805b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HF_TOKEN set? True len= 37\n",
-      "GET https://router.huggingface.co/hf-inference/models/deepseek-ai/DeepSeek-V3.2 -> 404\n",
-      "Not Found\n"
+      "GET http://localhost:11434/v1/models -> 200\n",
+      "{\"object\":\"list\",\"data\":[{\"id\":\"qwen3:8b\",\"object\":\"model\",\"created\":1767692280,\"owned_by\":\"library\"},{\"id\":\"deepseek-r1:8b\",\"object\":\"model\",\"created\":1767688957,\"owned_by\":\"library\"}]}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Quick connectivity check (does NOT print your token)\n",
+    "# Connectivity check: local Ollama OpenAI-compatible API\n",
     "import os, requests\n",
     "\n",
-    "hf = os.getenv(\"HF_TOKEN\")\n",
-    "print(\"HF_TOKEN set?\", bool(hf), \"len=\", len(hf) if hf else None)\n",
-    "\n",
-    "# Router should exist (401/404/200 depends on auth/model availability)\n",
-    "url = \"https://router.huggingface.co/hf-inference/models/deepseek-ai/DeepSeek-V3.2\"\n",
-    "headers = {\"Authorization\": f\"Bearer {hf}\"} if hf else {}\n",
-    "r = requests.get(url, headers=headers, timeout=20)\n",
+    "base = os.getenv(\"LOCAL_OPENAI_BASE_URL\", \"http://localhost:11434/v1\").rstrip(\"/\")\n",
+    "url = f\"{base}/models\"\n",
+    "r = requests.get(url, timeout=10)\n",
     "print(\"GET\", url, \"->\", r.status_code)\n",
-    "print((r.text or \"\")[:200])"
+    "print((r.text or \"\")[:300])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "8c636726",
+   "execution_count": 55,
+   "id": "11687c07",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POST https://router.huggingface.co/v1/chat/completions -> 200\n",
-      "{\"id\":\"58a044cf2762af690d388558c739250f\",\"object\":\"chat.completion\",\"created\":1767611248,\"model\":\"deepseek/deepseek-v3.2\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\"Hello, it's a pleasure to meet you.\"},\"finish_reason\":\"stop\"}],\"usage\":{\"prompt_tokens\":10,\"completion_tokens\":11,\"\n"
+      "POST http://localhost:11434/v1/chat/completions -> 200\n",
+      "{\"id\":\"chatcmpl-158\",\"object\":\"chat.completion\",\"created\":1767692378,\"model\":\"qwen3:8b\",\"system_fingerprint\":\"fp_ollama\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\"\",\"reasoning\":\"Okay, the user wants me to say hello in one sentence. Let me think about how to approach this. First,\n"
      ]
     }
    ],
    "source": [
-    "# Test OpenAI-compatible router endpoint (optional)\n",
+    "# Test local chat completions (optional)\n",
     "import os, requests, json\n",
     "\n",
-    "hf = os.getenv(\"HF_TOKEN\")\n",
-    "url = \"https://router.huggingface.co/v1/chat/completions\"\n",
+    "base = os.getenv(\"LOCAL_OPENAI_BASE_URL\", \"http://localhost:11434/v1\").rstrip(\"/\")\n",
+    "url = f\"{base}/chat/completions\"\n",
     "payload = {\n",
-    "    \"model\": \"deepseek-ai/DeepSeek-V3.2\",\n",
+    "    \"model\": MODEL_NAME,\n",
     "    \"messages\": [{\"role\": \"user\", \"content\": \"Say hello in one sentence.\"}],\n",
     "    \"max_tokens\": 32,\n",
     "    \"temperature\": 0.2,\n",
     "}\n",
-    "headers = {\"Authorization\": f\"Bearer {hf}\", \"Content-Type\": \"application/json\"}\n",
-    "resp = requests.post(url, headers=headers, json=payload, timeout=30)\n",
+    "headers = {\"Content-Type\": \"application/json\"}\n",
+    "resp = requests.post(url, headers=headers, json=payload, timeout=60)\n",
     "print(\"POST\", url, \"->\", resp.status_code)\n",
     "print((resp.text or \"\")[:300])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "id": "520e5693",
    "metadata": {},
    "outputs": [
@@ -101,36 +116,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ready. Try: bot.reply('Hello!')\n"
+      "Ready.\n",
+      "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
+      "MODEL_NAME: qwen3:8b\n",
+      "Try: bot.reply('Hello!')\n"
      ]
     }
    ],
    "source": [
-    "import importlib\n",
-    "import deepseek_chat\n",
+    "import importlib, os\n",
     "\n",
+    "import deepseek_chat\n",
     "importlib.reload(deepseek_chat)\n",
+    "\n",
     "from deepseek_chat import DeepSeekChatbot\n",
     "\n",
-    "bot = DeepSeekChatbot(model=\"deepseek-ai/DeepSeek-V3.2\")\n",
-    "print(\"Ready. Try: bot.reply('Hello!')\")"
+    "bot = DeepSeekChatbot(model=MODEL_NAME)\n",
+    "print(\"Ready.\")\n",
+    "print(\"LOCAL_OPENAI_BASE_URL:\", os.getenv(\"LOCAL_OPENAI_BASE_URL\"))\n",
+    "print(\"MODEL_NAME:\", MODEL_NAME)\n",
+    "print(\"Try: bot.reply('Hello!')\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d42c5ea1",
+   "execution_count": 62,
+   "id": "20048336",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\celli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+      "Hello!\n"
      ]
     }
    ],
+   "source": [
+    "# Smoke test\n",
+    "print(bot.reply(\"Say hello in one sentence.\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d42c5ea1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# --- PDF attachment (Hybrid RAG: BM25 + Embeddings + Multi-step) ---\n",
     "from __future__ import annotations\n",
@@ -526,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed7ed9b486e64f70bc2291fbaa225031",
+       "model_id": "6bec729244634c1c81f3f97193ffd2df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "d98cb3c6",
    "metadata": {},
    "outputs": [],
@@ -630,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "81c21283",
    "metadata": {},
    "outputs": [
@@ -704,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "84070ff5",
    "metadata": {},
    "outputs": [
@@ -727,7 +759,7 @@
     "total = len(questions_to_run)\n",
     "for i, q in enumerate(questions_to_run, start=1):\n",
     "    bot.reset()  # avoid history leakage across questions\n",
-    "    ans = ask_on_pdf(q)\n",
+    "    ans = ask_on_pdf(\"I do not want search queries or keywords. I want you to write a complete, professional paragraph that answers the question using the technical details found in the chunks.\\n\" + q)\n",
     "    results.append({\"Question\": q, \"Answer\": ans})\n",
     "    if i % 10 == 0 or i == total:\n",
     "        print(f\"Done {i}/{total}\")\n",
