--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -5,18 +5,18 @@
    "id": "9606e0f3",
    "metadata": {},
    "source": [
-    "# Local Ollama Chatbot (Qwen)\n",
+    "# Local Ollama Chatbot (Llama 3.1)\n",
     "\n",
     "This notebook runs a minimal chatbot against a **local** Ollama model via its OpenAI-compatible API.\n",
     "\n",
     "Prereq:\n",
     "- Install Ollama and run it\n",
-    "- Ensure a model is pulled (example: `ollama pull qwen3:8b`)"
+    "- Ensure a model is pulled (example: `ollama pull llama3.1:latest`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "id": "5fe6dd67",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
-      "MODEL_NAME: qwen3:8b\n"
+      "MODEL_NAME: llama3.1:latest\n"
      ]
     }
    ],
@@ -33,32 +33,22 @@
     "# Local backend setup (Ollama)\n",
     "import os\n",
     "\n",
-<<<<<<< HEAD
     "# Ollama OpenAI-compatible base URL\n",
     "os.environ.setdefault(\"LOCAL_OPENAI_BASE_URL\", \"http://localhost:11434/v1\")\n",
     "\n",
-    "# Model to use (text-only Qwen is recommended for this notebook)\n",
-    "MODEL_NAME = os.getenv(\"LOCAL_MODEL_NAME\", \"qwen3:8b\")\n",
+    "# Model to use (set LOCAL_MODEL_NAME to override)\n",
+    "MODEL_NAME = os.getenv(\"LOCAL_MODEL_NAME\", \"llama3.1:latest\")\n",
     "\n",
     "# Optional: some gateways require a key; Ollama accepts any value.\n",
     "# os.environ.setdefault(\"LOCAL_OPENAI_API_KEY\", \"ollama\")\n",
     "\n",
     "print(\"LOCAL_OPENAI_BASE_URL:\", os.getenv(\"LOCAL_OPENAI_BASE_URL\"))\n",
     "print(\"MODEL_NAME:\", MODEL_NAME)"
-||||||| 73355e7
-    "# Recommended: set HF_TOKEN in your OS environment and restart the kernel.\n",
-    "# Example (PowerShell): setx HF_TOKEN \"hf_...\"\n",
-    "os.environ[\"HF_TOKEN\"] = \"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\""
-=======
-    "# Recommended: set HF_TOKEN in your OS environment and restart the kernel.\n",
-    "# Example (PowerShell): setx HF_TOKEN \"hf_...\"\n",
-    "os.environ[\"HF_TOKEN\"] = \"----\""
->>>>>>> bf6df2019af22d37103bd857f3d90c6f1e0aa079
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "id": "b89c805b",
    "metadata": {},
    "outputs": [
@@ -67,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "GET http://localhost:11434/v1/models -> 200\n",
-      "{\"object\":\"list\",\"data\":[{\"id\":\"qwen3:8b\",\"object\":\"model\",\"created\":1767692280,\"owned_by\":\"library\"},{\"id\":\"deepseek-r1:8b\",\"object\":\"model\",\"created\":1767688957,\"owned_by\":\"library\"}]}\n",
+      "{\"object\":\"list\",\"data\":[{\"id\":\"llama3.1:latest\",\"object\":\"model\",\"created\":1767698163,\"owned_by\":\"library\"},{\"id\":\"qwen3:8b\",\"object\":\"model\",\"created\":1767692280,\"owned_by\":\"library\"},{\"id\":\"deepseek-r1:8b\",\"object\":\"model\",\"created\":1767688957,\"owned_by\":\"library\"}]}\n",
       "\n"
      ]
     }
@@ -85,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "id": "11687c07",
    "metadata": {},
    "outputs": [
@@ -94,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "POST http://localhost:11434/v1/chat/completions -> 200\n",
-      "{\"id\":\"chatcmpl-158\",\"object\":\"chat.completion\",\"created\":1767692378,\"model\":\"qwen3:8b\",\"system_fingerprint\":\"fp_ollama\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\"\",\"reasoning\":\"Okay, the user wants me to say hello in one sentence. Let me think about how to approach this. First,\n"
+      "{\"id\":\"chatcmpl-368\",\"object\":\"chat.completion\",\"created\":1767698301,\"model\":\"llama3.1:latest\",\"system_fingerprint\":\"fp_ollama\",\"choices\":[{\"index\":0,\"message\":{\"role\":\"assistant\",\"content\":\"Hello, how are you today?\"},\"finish_reason\":\"stop\"}],\"usage\":{\"prompt_tokens\":16,\"completion_tokens\":8,\"total\n"
      ]
     }
    ],
@@ -118,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "id": "520e5693",
    "metadata": {},
    "outputs": [
@@ -128,7 +118,7 @@
      "text": [
       "Ready.\n",
       "LOCAL_OPENAI_BASE_URL: http://localhost:11434/v1\n",
-      "MODEL_NAME: qwen3:8b\n",
+      "MODEL_NAME: llama3.1:latest\n",
       "Try: bot.reply('Hello!')\n"
      ]
     }
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "id": "20048336",
    "metadata": {},
    "outputs": [
@@ -169,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "d42c5ea1",
    "metadata": {},
    "outputs": [],
@@ -494,7 +484,7 @@
     "        f\"EXCERPTS:\\n{context if context else '[No relevant excerpts found]'}\\n\\n\"\n",
     "        f\"QUESTION:\\n{question}\"\n",
     "    )\n",
-    "    return bot.reply(prompt)\n",
+    "    return bot.reply(prompt, max_tokens=1024)\n",
     "\n",
     "\n",
     "def _extract_first_upload(value) -> tuple[str, bytes] | None:\n",
@@ -672,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "id": "81c21283",
    "metadata": {},
    "outputs": [
@@ -746,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "id": "84070ff5",
    "metadata": {},
    "outputs": [
@@ -769,7 +759,8 @@
     "total = len(questions_to_run)\n",
     "for i, q in enumerate(questions_to_run, start=1):\n",
     "    bot.reset()  # avoid history leakage across questions\n",
-    "    ans = ask_on_pdf(\"I do not want search queries or keywords. I want you to write a complete, professional paragraph that answers the question using the technical details found in the chunks.\\n\" + q)\n",
+    "    strict_prompt = \"\"\n",
+    "    ans = ask_on_pdf(strict_prompt + q)\n",
     "    results.append({\"Question\": q, \"Answer\": ans})\n",
     "    if i % 10 == 0 or i == total:\n",
     "        print(f\"Done {i}/{total}\")\n",
