--- a/DeepSeek_test/evaluation.ipynb
+++ b/DeepSeek_test/evaluation.ipynb
@@ -159,16 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "d42c5ea1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- PDF attachment (Hybrid RAG: BM25 + Embeddings + Multi-step) ---\n",
+    "# --- PDF attachment (Hybrid RAG: BM25 + Embeddings + Multi-Query + CoVe) ---\n",
     "from __future__ import annotations\n",
     "\n",
     "import io\n",
-    "import math\n",
     "import re\n",
     "from dataclasses import dataclass\n",
     "from typing import Dict, List, Optional, Tuple\n",
@@ -243,8 +242,40 @@
     "    return re.sub(r\"\\s+\", \" \", text).strip()\n",
     "\n",
     "\n",
-    "def chunk_colreg(text: str, *, max_chars: int = 1600, overlap: int = 250) -> List[Tuple[str, str]]:\n",
-    "    \"\"\"Chunk COLREG-like docs by headings (Rule/Annex), then slice each section.\"\"\"\n",
+    "def _slice_tokens(text: str, *, max_tokens: int, overlap_tokens: int) -> List[str]:\n",
+    "    \"\"\"Approx token-based slicing (whitespace tokens).\"\"\"\n",
+    "    text = _normalize_ws(text)\n",
+    "    if not text:\n",
+    "        return []\n",
+    "    toks = text.split()\n",
+    "    if not toks:\n",
+    "        return []\n",
+    "    out: List[str] = []\n",
+    "    start = 0\n",
+    "    n = len(toks)\n",
+    "    max_tokens = max(1, int(max_tokens))\n",
+    "    overlap_tokens = max(0, int(overlap_tokens))\n",
+    "    while start < n:\n",
+    "        end = min(n, start + max_tokens)\n",
+    "        out.append(\" \".join(toks[start:end]))\n",
+    "        if end >= n:\n",
+    "            break\n",
+    "        start = max(0, end - overlap_tokens)\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def chunk_colreg(\n",
+    "    text: str,\n",
+    "    *,\n",
+    "    chunk_tokens: int = 500,\n",
+    "    overlap_tokens: int = 150,\n",
+    ") -> List[Tuple[str, str]]:\n",
+    "    \"\"\"Chunk COLREG-like docs by headings (Rule/Annex), then slice each section.\n",
+    "\n",
+    "    Requirement mapping:\n",
+    "    - chunk size ~500 tokens\n",
+    "    - overlap ~150 tokens\n",
+    "    \"\"\"\n",
     "    raw = text.replace(\"\\r\\n\", \"\\n\")\n",
     "    lines = [ln.strip() for ln in raw.split(\"\\n\")]\n",
     "    headings: List[Tuple[int, str]] = []\n",
@@ -255,44 +286,18 @@
     "        if m:\n",
     "            headings.append((i, m.group(1).strip()))\n",
     "    if not headings:\n",
-    "        # Fallback: no headings detected -> single section\n",
     "        joined = _normalize_ws(raw)\n",
-    "        return [(\"Document\", ch) for ch in _slice_text(joined, max_chars=max_chars, overlap=overlap)]\n",
+    "        return [(\"Document\", ch) for ch in _slice_tokens(joined, max_tokens=chunk_tokens, overlap_tokens=overlap_tokens)]\n",
     "\n",
-    "    # Ensure start at first heading\n",
     "    chunks: List[Tuple[str, str]] = []\n",
     "    for idx, (start_i, title) in enumerate(headings):\n",
     "        end_i = headings[idx + 1][0] if idx + 1 < len(headings) else len(lines)\n",
     "        section_text = _normalize_ws(\" \".join([ln for ln in lines[start_i:end_i] if ln]))\n",
     "        if not section_text:\n",
     "            continue\n",
-    "        for ch in _slice_text(section_text, max_chars=max_chars, overlap=overlap):\n",
+    "        for ch in _slice_tokens(section_text, max_tokens=chunk_tokens, overlap_tokens=overlap_tokens):\n",
     "            chunks.append((title, ch))\n",
     "    return chunks\n",
-    "\n",
-    "\n",
-    "def _slice_text(text: str, *, max_chars: int, overlap: int) -> List[str]:\n",
-    "    text = _normalize_ws(text)\n",
-    "    if not text:\n",
-    "        return []\n",
-    "    out: List[str] = []\n",
-    "    start = 0\n",
-    "    n = len(text)\n",
-    "    while start < n:\n",
-    "        end = min(n, start + max_chars)\n",
-    "        out.append(text[start:end])\n",
-    "        if end >= n:\n",
-    "            break\n",
-    "        start = max(0, end - overlap)\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "def _cosine_sim(a: np.ndarray, b: np.ndarray) -> float:\n",
-    "    na = np.linalg.norm(a)\n",
-    "    nb = np.linalg.norm(b)\n",
-    "    if na == 0 or nb == 0:\n",
-    "        return 0.0\n",
-    "    return float(np.dot(a, b) / (na * nb))\n",
     "\n",
     "\n",
     "def _minmax(scores: np.ndarray) -> np.ndarray:\n",
@@ -324,10 +329,13 @@
     "\n",
     "\n",
     "ATTACHED_PDF: AttachedPDF | None = None\n",
-    "RETRIEVE_K = 6\n",
+    "RETRIEVE_K = 10\n",
     "BM25_WEIGHT = 0.55\n",
     "SEM_WEIGHT = 0.45\n",
     "EMBEDDER_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "CHUNK_TOKENS = 1024\n",
+    "CHUNK_OVERLAP_TOKENS = 256\n",
+    "COVE_ENABLED = True\n",
     "_EMBEDDER: Optional[SentenceTransformer] = None  # type: ignore\n",
     "\n",
     "\n",
@@ -343,7 +351,7 @@
     "def attach_pdf_text(name: str, text: str) -> None:\n",
     "    \"\"\"Attach PDF text and build hybrid indexes (BM25 + embeddings).\"\"\"\n",
     "    global ATTACHED_PDF\n",
-    "    pairs = chunk_colreg(text)\n",
+    "    pairs = chunk_colreg(text, chunk_tokens=CHUNK_TOKENS, overlap_tokens=CHUNK_OVERLAP_TOKENS)\n",
     "    chunks = [Chunk(idx=i, section=sec, text=ch) for i, (sec, ch) in enumerate(pairs)]\n",
     "    bm25_tokens = [_tokenize(c.text) for c in chunks]\n",
     "    bm25 = BM25Okapi(bm25_tokens)\n",
@@ -351,7 +359,6 @@
     "    embedder = _get_embedder()\n",
     "    embeddings: Optional[np.ndarray] = None\n",
     "    if embedder is not None:\n",
-    "        # Encode sections+text (helps retrieval by rule name)\n",
     "        docs = [f\"{c.section}. {c.text}\" for c in chunks]\n",
     "        emb = embedder.encode(docs, normalize_embeddings=True, show_progress_bar=False)\n",
     "        embeddings = np.asarray(emb, dtype=np.float32)\n",
@@ -366,6 +373,7 @@
     "        embeddings=embeddings,\n",
     "    )\n",
     "    print(f\"Attached PDF: {name} ({len(text):,} chars, {len(chunks)} chunks)\")\n",
+    "    print(f\"Chunking: ~{CHUNK_TOKENS} tokens, overlap ~{CHUNK_OVERLAP_TOKENS} tokens\")\n",
     "    if embeddings is None:\n",
     "        print(\"(Embeddings disabled: sentence-transformers not available)\")\n",
     "\n",
@@ -388,7 +396,6 @@
     "        if embedder is not None:\n",
     "            q_emb = embedder.encode([question], normalize_embeddings=True, show_progress_bar=False)\n",
     "            q_emb = np.asarray(q_emb[0], dtype=np.float32)\n",
-    "            # cosine because embeddings are normalized => dot product = cosine\n",
     "            sem = np.dot(ATTACHED_PDF.embeddings, q_emb).astype(float)\n",
     "            sem_norm = _minmax(sem)\n",
     "\n",
@@ -403,7 +410,6 @@
     "    seen_sections: Dict[str, int] = {}\n",
     "    for idx in indices:\n",
     "        sec = ATTACHED_PDF.chunks[idx].section\n",
-    "        # allow up to 2 chunks per section in the final context\n",
     "        if seen_sections.get(sec, 0) >= 2:\n",
     "            continue\n",
     "        picked.append(idx)\n",
@@ -424,59 +430,136 @@
     "\n",
     "\n",
     "def _build_context(indices: List[int]) -> str:\n",
+    "    \"\"\"Hierarchy-aware context formatting (grouped by section).\"\"\"\n",
     "    assert ATTACHED_PDF is not None\n",
     "    if not indices:\n",
     "        return \"\"\n",
-    "    blocks: List[str] = []\n",
+    "    # Preserve retrieval order but group by section for readability/hierarchy clarity.\n",
+    "    by_section: Dict[str, List[int]] = {}\n",
+    "    section_order: List[str] = []\n",
     "    for idx in indices:\n",
-    "        c = ATTACHED_PDF.chunks[idx]\n",
-    "        blocks.append(f\"[Chunk {idx+1} | {c.section}] {c.text}\")\n",
-    "    return \"\\n\\n\".join(blocks)\n",
+    "        sec = ATTACHED_PDF.chunks[idx].section\n",
+    "        if sec not in by_section:\n",
+    "            by_section[sec] = []\n",
+    "            section_order.append(sec)\n",
+    "        by_section[sec].append(idx)\n",
+    "\n",
+    "    blocks: List[str] = []\n",
+    "    for sec in section_order:\n",
+    "        blocks.append(f\"=== {sec} ===\")\n",
+    "        for idx in by_section[sec]:\n",
+    "            c = ATTACHED_PDF.chunks[idx]\n",
+    "            blocks.append(f\"(Chunk {idx+1}) {c.text}\")\n",
+    "        blocks.append(\"\")\n",
+    "    return \"\\n\".join(blocks).strip()\n",
     "\n",
     "\n",
-    "def _generate_search_queries(question: str) -> List[str]:\n",
-    "    \"\"\"Ask the LLM for 3 short retrieval queries (multi-step RAG).\"\"\"\n",
+    "def _generate_subqueries(question: str) -> List[str]:\n",
+    "    \"\"\"Multi-Query Retrieval: have the LLM generate 3 diverse sub-queries.\"\"\"\n",
     "    prompt = (\n",
-    "        \"Generate 3 short search queries (keywords + any relevant Rule/Annex numbers) \"\n",
-    "        \"to find the answer in the COLREG document. Output only the queries, one per line.\\n\\n\"\n",
-    "        f\"Question: {question}\"\n",
+    "        \"Generate exactly 3 short, diverse search sub-queries to retrieve passages from the COLREG document. \"\n",
+    "        \"Each sub-query should be a keyword-style query and may include Rule/Annex numbers if relevant.\\n\"\n",
+    "        \"Rules:\\n\"\n",
+    "        \"- Output ONLY the 3 queries, one per line\\n\"\n",
+    "        \"- No explanations\\n\"\n",
+    "        \"- Keep each query <= 12 words\\n\\n\"\n",
+    "        f\"User question: {question}\"\n",
     "    )\n",
-    "    raw = bot.reply(prompt, max_tokens=128, temperature=0.2)\n",
+    "    raw = bot.reply(prompt, max_tokens=96, temperature=0.2)\n",
     "    lines = [ln.strip(\" -\\t\") for ln in raw.splitlines() if ln.strip()]\n",
-    "    # keep at most 3\n",
-    "    return lines[:3] if lines else [question]\n",
+    "    # Deduplicate while preserving order\n",
+    "    seen = set()\n",
+    "    out: List[str] = []\n",
+    "    for ln in lines:\n",
+    "        key = ln.lower()\n",
+    "        if key in seen:\n",
+    "            continue\n",
+    "        seen.add(key)\n",
+    "        out.append(ln)\n",
+    "        if len(out) >= 3:\n",
+    "            break\n",
+    "    return out if out else [question]\n",
     "\n",
     "\n",
-    "def retrieve_context_multistep(question: str, *, k: int = 6) -> List[int]:\n",
-    "    \"\"\"Two-pass retrieval: initial -> query expansion -> merged retrieval.\"\"\"\n",
+    "def retrieve_context_multiquery(question: str, *, k: int = 6) -> List[int]:\n",
+    "    \"\"\"Two-pass retrieval: initial retrieval + 3 LLM sub-queries -> merged scoring.\"\"\"\n",
     "    if not ATTACHED_PDF:\n",
     "        return []\n",
-    "    # Pass 1\n",
+    "    # Pass 1 (seed)\n",
     "    init = retrieve_context(question, k=max(4, k), pool=30)\n",
-    "    # Pass 2: query expansion\n",
-    "    queries = _generate_search_queries(question)\n",
+    "    # Pass 2 (multi-query)\n",
+    "    queries = _generate_subqueries(question)\n",
     "    merged_scores = np.zeros(len(ATTACHED_PDF.chunks), dtype=float)\n",
-    "    # seed with initial question\n",
     "    for q in [question] + queries:\n",
     "        hybrid, _, _ = _hybrid_scores(q)\n",
     "        merged_scores = np.maximum(merged_scores, hybrid)\n",
     "    ranked = np.argsort(-merged_scores)[: 40].tolist()\n",
     "    ranked = [i for i in ranked if merged_scores[i] > 0]\n",
-    "    # ensure we keep some of the pass-1 results\n",
+    "    # Ensure we keep some of the seed results\n",
     "    for idx in init:\n",
     "        if idx in ranked:\n",
     "            ranked.remove(idx)\n",
     "        ranked.insert(0, idx)\n",
-    "    # Diverse final\n",
     "    return _diverse_topk(ranked, k=k)\n",
     "\n",
     "\n",
-    "def ask_on_pdf(question: str, *, k: int | None = None, multistep: bool = True) -> str:\n",
+    "def _cove_answer(question: str, *, context: str) -> str:\n",
+    "    \"\"\"Chain-of-Verification (CoVe) without revealing internal reasoning: returns final answer only.\"\"\"\n",
+    "    # 1) Draft answer\n",
+    "    draft_prompt = (\n",
+    "        \"Answer the QUESTION using ONLY the EXCERPTS. \"\n",
+    "        \"Cite evidence like (Chunk 12). If the excerpts do not contain the answer, say you don't know.\\n\\n\"\n",
+    "        f\"EXCERPTS:\\n{context if context else '[No relevant excerpts found]'}\\n\\n\"\n",
+    "        f\"QUESTION:\\n{question}\\n\\n\"\n",
+    "        \"Output ONLY the draft answer.\"\n",
+    "    )\n",
+    "    draft = bot.reply(draft_prompt, max_tokens=512, temperature=0.2).strip()\n",
+    "\n",
+    "    # 2) Verification questions\n",
+    "    ver_prompt = (\n",
+    "        \"Create exactly 3 verification questions that would check whether the DRAFT is fully supported by the EXCERPTS. \"\n",
+    "        \"Focus on potential missing conditions, exceptions, or definitions.\\n\\n\"\n",
+    "        f\"QUESTION:\\n{question}\\n\\n\"\n",
+    "        f\"DRAFT:\\n{draft}\\n\\n\"\n",
+    "        \"Output ONLY the 3 verification questions, one per line.\"\n",
+    "    )\n",
+    "    ver_raw = bot.reply(ver_prompt, max_tokens=128, temperature=0.2)\n",
+    "    ver_qs = [ln.strip(\" -\\t\") for ln in ver_raw.splitlines() if ln.strip()]\n",
+    "    ver_qs = ver_qs[:3] if ver_qs else []\n",
+    "    ver_q_block = \"\\n\".join(f\"- {q}\" for q in ver_qs) if ver_qs else \"- (none)\"\n",
+    "\n",
+    "    # 3) Answer verification questions strictly from excerpts\n",
+    "    ver_ans_prompt = (\n",
+    "        \"Using ONLY the EXCERPTS, answer each verification question briefly. \"\n",
+    "        \"If an answer is not supported by the EXCERPTS, write 'Not supported'.\\n\\n\"\n",
+    "        f\"EXCERPTS:\\n{context if context else '[No relevant excerpts found]'}\\n\\n\"\n",
+    "        f\"VERIFICATION QUESTIONS:\\n{ver_q_block}\\n\\n\"\n",
+    "        \"Output ONLY the answers, one per line in the same order.\"\n",
+    "    )\n",
+    "    ver_answers = bot.reply(ver_ans_prompt, max_tokens=256, temperature=0.2).strip()\n",
+    "\n",
+    "    # 4) Final answer (only)\n",
+    "    final_prompt = (\n",
+    "        \"You are evaluating a model. Produce the FINAL answer using ONLY the EXCERPTS. \"\n",
+    "        \"If something in the DRAFT is not supported by the verification answers, remove or correct it. \"\n",
+    "        \"Cite chunks like (Chunk 12). If the excerpts do not contain the answer, say you don't know.\\n\\n\"\n",
+    "        f\"EXCERPTS:\\n{context if context else '[No relevant excerpts found]'}\\n\\n\"\n",
+    "        f\"QUESTION:\\n{question}\\n\\n\"\n",
+    "        f\"DRAFT:\\n{draft}\\n\\n\"\n",
+    "        f\"VERIFICATION ANSWERS:\\n{ver_answers}\\n\\n\"\n",
+    "        \"Output ONLY the final answer.\"\n",
+    "    )\n",
+    "    return bot.reply(final_prompt, max_tokens=1024, temperature=0.2).strip()\n",
+    "\n",
+    "\n",
+    "def ask_on_pdf(question: str, *, k: int | None = None, multiquery: bool = True) -> str:\n",
     "    if not ATTACHED_PDF:\n",
     "        return bot.reply(question)\n",
     "    k = RETRIEVE_K if k is None else k\n",
-    "    indices = retrieve_context_multistep(question, k=k) if multistep else retrieve_context(question, k=k)\n",
+    "    indices = retrieve_context_multiquery(question, k=k) if multiquery else retrieve_context(question, k=k)\n",
     "    context = _build_context(indices)\n",
+    "    if COVE_ENABLED:\n",
+    "        return _cove_answer(question, context=context)\n",
     "    prompt = (\n",
     "        \"You are evaluating a model. Answer the user's question using ONLY the provided document excerpts. \"\n",
     "        \"Cite the chunks you used like (Chunk 12). If the excerpts do not contain the answer, say you don't know.\\n\\n\"\n",
@@ -662,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "id": "81c21283",
    "metadata": {},
    "outputs": [
@@ -673,7 +756,8 @@
       "CSV: C:\\Users\\celli\\Documents\\.PIP2026\\PIP-2026-LOTUSim_G5_Fatigue\\Set évaluation RAG.csv\n",
       "PDF: C:\\Users\\celli\\Documents\\.PIP2026\\PIP-2026-LOTUSim_G5_Fatigue\\COLREG-Consolidated-2018.pdf\n",
       "Loaded 12 questions\n",
-      "Attached PDF: COLREG-Consolidated-2018.pdf (104,429 chars, 95 chunks)\n"
+      "Attached PDF: COLREG-Consolidated-2018.pdf (104,429 chars, 72 chunks)\n",
+      "Chunking: ~500 tokens, overlap ~150 tokens\n"
      ]
     }
    ],
@@ -736,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "id": "84070ff5",
    "metadata": {},
    "outputs": [
